--- a/src/main/resources/templates/products/createProductForm.html
+++ b/src/main/resources/templates/products/createProductForm.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+</head>
 <body>
-<div class="container">
+    <div class="container" style="max-width: 600px">
+        <div class="py-3 text-center">
+            <h2>상품 등록</h2>
+        </div>
     <form action="/products/new" method="post">
-    <div class="form-group">
-        <label for="name">상품명</label>
-        <input type="text" id="name" name="name" placeholder="상품명을 입력하세요">
-    <form action="/members/new" method="post">
-    <div class="form-group">
-        <label for="price">가격</label>
-        <input type="text" id="price" name="price" placeholder="가격을 입력하세요">
-    <form action="/members/new" method="post">
-    <div class="form-group">
-        <label for="stock">재고량</label>
-        <input type="text" id="stock" name="stock" placeholder="재고량을 입력하세요">
+        <div class="form-group">
+            <div class="row mb-2">
+                <label for="name">상품명</label>
+                <input type="text" id="name" name="name" placeholder="상품명을 입력하세요"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="row mb-2">
+                <label for="price">가격</label>
+                <input type="number" id="price" name="price" placeholder="가격을 입력하세요"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="row mb-2">
+                <label for="stock">재고량</label>
+                <input type="number" id="stock" name="stock" placeholder="재고량을 입력하세요"/>
+            </div>
+        </div>
+        <div class = "row">
+            <div class= "col">
+                <button class="w-100 btn btn-primary" type="submit">등록</button>
+            </div>
+            <div class= "col">
+                <button class="w-100 btn btn-secondary" onclick="location.href='/'" type="button">취소</button>
+            </div>
+        </div>
+    </form>
     </div>
-    <button type="submit">등록</button>
-        </form>
 </body>
-</div>
 </html>
