--- a/src/main/resources/templates/products/productUpdateForm.html
+++ b/src/main/resources/templates/products/productUpdateForm.html
@@ -1,22 +1,39 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+<head>
+  <link href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+</head>
 <body>
+<div class="container" style="max-width: 600px">
+  <div class="py-3 text-center">
+    <h2>상품 수정</h2>
+  </div>
 <form th:object="${product}" method="post">
   <!-- id -->
   <input type="hidden" th:value="*{no}" />
 
   <div class="form-group">
+    <div class="row mb-2">
     <label th:for="name">상품명</label>
     <input type="text" name="name" th:value="*{name}" placeholder="상품명을 입력하세요" />
   </div>
   <div class="form-group">
+    <div class="row mb-2">
     <label th:for="price">가격</label>
     <input type="number" name="price" th:value="*{price}" placeholder="가격을 입력하세요" />
   </div>
   <div class="form-group">
+    <div class="row mb-2">
     <label th:for="stock">재고량</label>
     <input type="number" name="stock" th:value="*{stock}" placeholder="재고량을 입력하세요" />
   </div>
-  <button type="submit">Submit</button>
+    <div class = "row">
+      <div class= "col">
+    <button class="w-100 btn btn-primary" type="submit">등록</button>
+      </div>
+      <div class= "col">
+    <button class="w-100 btn btn-secondary" onclick="location.href= '/'" type="cancel">취소</button>
+      </div>
+    </div>
 </form>
 </body>
